Footer, misc fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,3 +13,12 @@ body {
     padding-top: 55px;
     margin-top:-55px;
 }
+
+#footer {
+    height: 60px;
+    margin-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #101010;
+}
+
